get all tasks endpoint
