# model/task.go
@@ -1,1 +1,14 @@
 package model
+
+import "time"
+
+type Task struct {
+	Id          string    `json:"id"`
+	Title       string    `json:"title"`
+	Description string    `json:"description"`
+	Completed   bool      `json:"completed"`
+	StartDate   time.Time `json:"startDate"`
+	Deadline    time.Time `json:"deadline"`
+	CreatedAt   time.Time `json:"createdAt"`
+	UpdatedAt   time.Time `json:"updatedAt"`
+}
